--- a/HW_2/Makefile
+++ b/HW_2/Makefile
@@ -1,17 +1,17 @@
-default: prog
+default: all
+
+all: clean prog b2s
 
 dynArray.o: dynArray.c dynArray.h 
 	gcc -Wall -ansi -c dynArray.c	
 
-prog: dynArray.o
+prog: stackapp.c dynArray.o
 	gcc -Wall -ansi -o prog dynArray.o stackapp.c
 
 b2s: dynArray.o
 	gcc -Wall -ansi -o b2s dynArray.o bag2set.c
 		
 clean:
-	rm dynArray.o
-
-cleanall: clean
-	rm *.o
-	rm prog
+	rm -f *.o
+	rm -f prog
+	rm -f b2s
