working on HW 3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "bitset": "cpp",
         "__config": "cpp",
         "__debug": "cpp",
-        "version": "cpp"
+        "version": "cpp",
+        "hashmap.h": "c"
     }
 }
