--- a/HW_3/Makefile
+++ b/HW_3/Makefile
@@ -1,21 +1,13 @@
-default: prog 
+default: prog
 
-hashMap.o: hashMap.c hashMap.h 
+hashMap.o: hashMap.c hashMap.h
 	gcc -Wall -ansi -pedantic-errors -c hashMap.c
 
-linkedList.o: linkedList.h linkedList.c
-	gcc -Wall -ansi -pedantic-errors -c linkedList.c
-
-prog: hashMap.o linkedList.o main.c
+prog: hashMap.o main.c
 	gcc -Wall -ansi -pedantic-errors -o prog hashMap.o  main.c
 
 clean:
-	rm hashMap.o	
-	rm linkedList.o
+	rm hashMap.o
 
 cleanall: clean
-	rm prog
-
-scrub:
-	rm *.o
 	rm prog
