added some solutions

--- a/HW_4/Makefile
+++ b/HW_4/Makefile
@@ -4,7 +4,7 @@ avl.o: avl.c avl.h
 	gcc -Wall -ansi -pedantic-errors -c avl.c
 
 prog: avl.o main.c
-	gcc -Wall -ansi -pedantic-errors -gstabs -o prog avl.o  main.c
+	gcc -Wall -ansi -pedantic-errors -o prog avl.o  main.c
 
 clean:
 	rm avl.o	
